# prism

./: .gitignore  CMakeLists.txt  README.MD  run.sh
include/glad/: glad.h
shaders/: lit.fs  lit.vs  unlit.fs  unlit.vert  unlit.vs
src/: glad.c  main.c  main.cpp  mesh.c  mesh.cpp  mesh.h  shader.c  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
